--- a/index6.html
+++ b/index6.html
@@ -349,7 +349,10 @@ async function Submit_to_cloudStorage() {
 		// --------------------------
 		
 		// Detect when the backend workflow ends, by checking the list bucket contents for each file
+		console.log('file_names.length: ', file_names.length);
 		for (let i=0; i<file_names.length; i++) {
+
+			console.log('i: ', i);
 			
 			var file_array = await List_bucket_contents(false);
 			let regexp = new RegExp(`${file_names.at(i)}`, 'g');
@@ -362,13 +365,16 @@ async function Submit_to_cloudStorage() {
 				await new Promise(r => setTimeout(r, 5000));
 				
 				console.log('match: ', match);
+				console.log('c: ', c);
 				c = c + 1;
 			}
-			
-			if ( match.length == 0 ) {
-				document.getElementById('notification').innerHTML = `File ${file_names.at(i)} was not successfully put in the bucket ${GCP_bucket_name}`;
-			} else {
-				document.getElementById('notification').innerHTML = `File ${file_names.at(i)} was successfully put in the bucket ${GCP_bucket_name}`;
+
+			await function() { 
+				if ( match.at(0) == file_names.at(i) ) {
+					document.getElementById('notification').innerHTML = `File ${match.at(0)} was successfully put in the bucket ${GCP_bucket_name}`;
+				} else {
+					document.getElementById('notification').innerHTML = `File ${file_names.at(i)} was not successfully put in the bucket ${GCP_bucket_name}`;
+				}
 			}
 			
 		}
