--- a/index6.html
+++ b/index6.html
@@ -372,7 +372,7 @@ async function Submit_to_cloudStorage() {
 				c = c + 1;
 			}
 			
-			await confirmation_notification(match, file_names);
+			await confirmation_notification(match, file_names.at(i), GCP_bucket_name);
 			
 		}
 		
@@ -389,12 +389,12 @@ async function Submit_to_cloudStorage() {
 
 // ----------------------------------------------------
 	
-async function confirmation_notification(match, file_names) {
+async function confirmation_notification(match, file_names_at_i, GCP_bucket_name) {
 	
-	if ( match.at(0) == file_names.at(i) ) {
+	if ( match.at(0) == file_names_at_i ) {
 		document.getElementById('notification').innerHTML += `File ${match.at(0)} was successfully put in the bucket ${GCP_bucket_name}`+"<br>";
 	} else {
-		document.getElementById('notification').innerHTML += `File ${file_names.at(i)} was not successfully put in the bucket ${GCP_bucket_name}`+"<br>";
+		document.getElementById('notification').innerHTML += `File ${file_names_at_i} was not successfully put in the bucket ${GCP_bucket_name}`+"<br>";
 	}
 }
 	
