--- a/index6.html
+++ b/index6.html
@@ -315,7 +315,7 @@ async function Submit_to_cloudStorage() {
 		
 		// Loop over each key and save each file to repository
 		var file_names = Object.keys(obj);
-		// console.log("file_names: ", file_names)
+		console.log("file_names: ", file_names)
 		
 		for (let i=0; i<file_names.length; i++) {
 
@@ -355,10 +355,10 @@ async function Submit_to_cloudStorage() {
 		await file_names.map((file_name, i) => {
 			console.log('file_name: ', file_name);
 			
-			var match = await run_confirmation_function(file_name);
-			console.log('match: ', match);
+			// var match = await run_confirmation_function(file_name);
+			// console.log('match: ', match);
 			
-			await confirmation_notification(match, file_name);
+			// await confirmation_notification(match, file_name);
 			return "";
 		});
 		
@@ -376,9 +376,10 @@ async function Submit_to_cloudStorage() {
 // ----------------------------------------------------
 	
 async function run_confirmation_function(file_name) {
+
+	let regexp = new RegExp(`${file_name}`, 'g');
 	
 	let file_array = await List_bucket_contents(false);
-	let regexp = new RegExp(`${file_name}`, 'g');
 	let match = file_array.join(' ').match(regexp) ?? [];
 	let c = 0;
 	while (match.length == 0  && c < 10) {
