--- a/index6.html
+++ b/index6.html
@@ -356,9 +356,29 @@ async function Submit_to_cloudStorage() {
 			console.log('file_name: ', file_name);
 			
 			// var match = await run_confirmation_function(file_name);
-			// console.log('match: ', match);
+			// OR
+			let regexp = new RegExp(`${file_name}`, 'g');
+			let match = [];
+			let c = 0;
+			while (match.length == 0  && c < 10) {
+				file_array = await List_bucket_contents(false);
+				match = file_array.join(' ').match(regexp) ?? [];
+				await new Promise(r => setTimeout(r, 5000));
+				console.log('c: ', c);
+				c = c + 1;
+			}
+			
+			console.log('match: ', match);
+			console.log('match.at(0): ', match.at(0));
 			
 			// await confirmation_notification(match, file_name);
+			// OR
+			if ( match.at(0) == file_name ) {
+				document.getElementById('notification').innerHTML += `File ${match.at(0)} was successfully put in the bucket ${document.getElementById("GCP_bucket_name").value}`+"<br>";
+			} else {
+				document.getElementById('notification').innerHTML += `File ${file_name} was not successfully put in the bucket ${document.getElementById("GCP_bucket_name").value}`+"<br>";
+			}
+			
 			return "";
 		});
 		
@@ -378,9 +398,7 @@ async function Submit_to_cloudStorage() {
 async function run_confirmation_function(file_name) {
 
 	let regexp = new RegExp(`${file_name}`, 'g');
-	
-	let file_array = await List_bucket_contents(false);
-	let match = file_array.join(' ').match(regexp) ?? [];
+	let match = [];
 	let c = 0;
 	while (match.length == 0  && c < 10) {
 		file_array = await List_bucket_contents(false);
