--- a/index7.html
+++ b/index7.html
@@ -47,7 +47,6 @@
 
 
 <div id="notification"></div>
-<div id="error"></div>
 	
 <!-- ---------------------------------------- -->
 <!-- CSS -->
@@ -58,8 +57,7 @@
 }
 
 div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; }
-div#notification { position: relative; color: #3236a8; }
-div#error { position: relative; color: #bd1f17; }
+div#notification { position: relative; color: var(--title-color-light); }
 	
 body { background-color: var(--background-color-light); color: var(--text-color-light); }
 	
@@ -111,11 +109,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-.dropArea { height: 200px;
-  width: 200px;
-	border-radius: 15px;
-	border: 0.25px solid black;
-}
+.dropArea { height: 200px; width: 200px; border-radius: 15px; border: 0.25px solid black; background-color: var(--background-color-light); }
   
 </style>
 <!-- ---------------------------------------- -->
