--- a/index7.html
+++ b/index7.html
@@ -14,8 +14,6 @@
 	<li>Submit files to the Storage Method.</li>
 	<li>List files from the Storage Method.</li>
 </ol>
-  
-<br>
 
 <h3>A. Select the Storage Method and input authentication.</h3>
 <label for="select_dropdown_option_label">Select a drop down option:</label>
@@ -56,8 +54,8 @@
       --text-color-light: #333333;
 }
 
-div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; }
-div#notification { position: relative; color: var(--title-color-light); }
+div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; color: var(--text-color-light); }
+div#notification { position: relative; color: var(--text-color-light); }
 	
 body { background-color: var(--background-color-light); color: var(--text-color-light); }
 	
