--- a/index7.html
+++ b/index7.html
@@ -55,7 +55,7 @@
 }
 
 div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; color: var(--text-color-light); }
-div#notification { position: relative; color: #d2d4d2 }
+div#notification { position: relative; color: #acadac }
 	
 body { background-color: var(--background-color-light); color: var(--text-color-light); }
 	
