--- a/index7.html
+++ b/index7.html
@@ -54,7 +54,7 @@
       --text-color-light: #333333;
 }
 
-div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; color: var(--text-color-light); }
+div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; }
 div#notification { position: relative; color: #acadac }
 	
 body { background-color: var(--background-color-light); color: var(--text-color-light); }
