--- a/index7.html
+++ b/index7.html
@@ -107,7 +107,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-.dropArea { height: 200px; width: 200px; border-radius: 15px; border: 0.25px solid black; background-color: var(--background-color-light); }
+.dropArea { height: 200px; width: 200px; border-radius: 15px; border: 0.25px solid white; }
   
 </style>
 <!-- ---------------------------------------- -->
