--- a/index7.html
+++ b/index7.html
@@ -55,7 +55,7 @@
 }
 
 div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; }
-div#notification { position: relative; color: #acadac }
+div#notification { position: relative; color: #a1a1a1 }
 	
 body { background-color: var(--background-color-light); color: var(--text-color-light); }
 	
@@ -107,7 +107,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-.dropArea { height: 200px; width: 200px; border-radius: 15px; border: 0.25px solid white; }
+.dropArea { height: 200px; width: 200px; border-radius: 15px; border: 0.25px solid #a1a1a1; }
   
 </style>
 <!-- ---------------------------------------- -->
